-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.3, 6.8.0
-
None
-
-
1e7581faf (dev), 6ade020b2 (6.8), 21dff2c12 (tqtc/lts-6.5)
Global scale factor has no effect on platform's window size on macOS.
There was no such problem with Qt 6.5.3.
Steps to reproduce:
1. Set QT_SCALE_FACTOR env variable to 2
2. Run sample code
import QtQuick Window { id: window width: 200 height: 200 visible: true Rectangle { anchors.centerIn: parent width: 190 height: 190 color: 'red' } }
3. Observe the window geometry
For Gerrit Dashboard: QTBUG-131093 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
603368,2 | macOS: Take QT_SCALE_FACTOR into account when applying NSWindow geometry | dev | qt/qtbase | Status: MERGED | +2 | 0 |
603449,2 | macOS: Take QT_SCALE_FACTOR into account when applying NSWindow geometry | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
603489,2 | macOS: Take QT_SCALE_FACTOR into account when applying NSWindow geometry | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |