src/plugins/platforms/cocoa/qnswindow.mm
@@ -14,6 +14,8 @@
 #include <qpa/qwindowsysteminterface.h>
 #include <qoperatingsystemversion.h>
 
+#include <QtGui/private/qhighdpiscaling_p.h>
+
 Q_LOGGING_CATEGORY(lcQpaEvents, "qt.qpa.events");
 
 static bool isMouseEvent(NSEvent *ev)
@@ -225,7 +227,8 @@ static bool isMouseEvent(NSEvent *ev)
     // client geometry based on the QWindow's positionPolicy is a noop.
     // Now that we have a NSWindow to read the frame from we re-apply
     // the QWindow geometry, which will move the NSWindow if needed.
-    m_platformWindow->setGeometry(window->geometry());
+    m_platformWindow->setGeometry(QHighDpi::toNativeWindowGeometry(window->geometry(), window));
+
 
     m_platformWindow->setVisible(window->isVisible());
 }
